--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "drizzle-orm": "~0.36.3",
     "express": "^5.1.0",
     "isbot": "^5.1.27",
+    "match-sorter": "^8.0.3",
     "morgan": "^1.10.0",
     "postgres": "^3.4.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.5.3"
+    "react-router": "^7.5.3",
+    "sort-by": "^1.2.0",
+    "tiny-invariant": "^1.3.3"
   },
   "devDependencies": {
     "@react-router/dev": "^7.5.3",
