--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "db:seed": "dotenv -- tsx database/seed.ts",
     "dev": "dotenv -- node server.js",
     "start": "node server.js",
-    "typecheck": "react-router typegen && tsc -b"
+    "typecheck": "react-router typegen && tsc -b",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui"
   },
   "dependencies": {
     "@react-router/express": "^7.5.3",
@@ -28,8 +33,11 @@
     "tiny-invariant": "^1.3.3"
   },
   "devDependencies": {
+    "@playwright/test": "^1.54.1",
     "@react-router/dev": "^7.5.3",
     "@tailwindcss/vite": "^4.1.4",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
     "@types/compression": "^1.7.5",
     "@types/express": "^5.0.1",
     "@types/express-serve-static-core": "^5.0.6",
@@ -40,10 +48,12 @@
     "@types/react-dom": "^19.1.2",
     "dotenv-cli": "^8.0.0",
     "drizzle-kit": "~0.28.1",
+    "jsdom": "^26.1.0",
     "tailwindcss": "^4.1.4",
     "tsx": "^4.19.2",
     "typescript": "^5.8.3",
     "vite": "^6.3.3",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.2.4"
   }
 }
